<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <!-- Original drawable was _light -->
    <item
        android:id="@+id/optionsMenuItem"
        android:title="@string/options_item_title"
        android:icon="@android:drawable/ic_menu_preferences"
        android:showAsAction="never" />
    <!-- Making these all android drawables because theming the menu options is a pain -->
    <item
        android:id="@+id/cacheMenuItem"
        android:title="@string/cache_item_title"
        android:icon="@android:drawable/ic_menu_delete"
        android:showAsAction="never" />
    <item
        android:id="@+id/historyMenuItem"
        android:title="@string/history_item_title"
        android:icon="@android:drawable/ic_menu_recent_history"
        android:showAsAction="never" />
    <item
        android:id="@+id/logMenuItem"
        android:title="@string/log_item_title"
        android:icon="@android:drawable/ic_menu_info_details"
        android:showAsAction="never" />
    <item
        android:id="@+id/aboutMenuItem"
        android:title="@string/about_item_title"
        android:icon="@android:drawable/ic_menu_help"
        android:showAsAction="never" />
</menu>
