<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1" >
        
        <RelativeLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >
            
            <LinearLayout
	            android:id="@+id/linearLayout1"
	            android:layout_width="match_parent"
	            android:layout_height="match_parent" >
	        </LinearLayout>
	
	        <TextView
	            android:id="@+id/textView1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentLeft="true"
	            android:text="@string/ip_address" />
	
	        <EditText
	            android:id="@+id/hostEditText"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_below="@id/textView1"
	            android:hint="@string/ip_hint" >
	
	            <requestFocus />
	        </EditText>
	
	        <TextView
	            android:id="@+id/textView2"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_below="@id/hostEditText"
	            android:text="@string/port" />
	
	        <EditText
	            android:id="@+id/portEditText"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_below="@id/textView2" />
	
	        <TextView
	            android:id="@+id/textView3"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_below="@id/portEditText"
	            android:text="@string/api_key" />
	
	        <EditText
	            android:id="@+id/apiEditText"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_below="@id/textView3" />

	        <Button
	            android:id="@+id/autoKeyButton"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentRight="true"
	            android:layout_below="@id/apiEditText"
	            android:text="@string/try_get_key" />
	        
        </RelativeLayout>
        
    </ScrollView>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="@string/save" />
    
</LinearLayout>